# mars777-ex06-cop-thief-mcp

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: bonus_partner.template.json  bonus_strategy.default.json  cloud.default.json  game.default.json  gmail.default.json  llm.default.json  logging.default.json  mcp.local.default.json  rate_limits.default.json  runtime.default.json
docs/: ACCEPTANCE_CRITERIA.md  CLOUD_DEPLOYMENT.md  COSTS.md  DECISIONS.md  FINAL_GAP_AUDIT.md  INTERGROUP_BONUS_PROTOCOL.md  PLAN.md  PRD.md  PRD_bonus_intergroup.md  PRD_game_engine.md  PRD_google_report_sender.md  PRD_mcp_servers.md  PRD_natural_language_protocol.md  PROMPTS.md  QUALITY.md  REQUIREMENTS_MATRIX.md  RISK_REGISTER.md  SECURITY.md  SUBMISSION_CHECKLIST.md  TODO.md
results/evidence/: bonus_game_email_sent.example.json  bonus_game_mutual_agreement.example.json  bonus_game_official_run.example.json  bonus_game_partner_handoff.example.json  bonus_game_partner_handoff_final.example.json  bonus_game_report.example.json  bonus_game_report_final_agreed.example.json  bonus_interop_readiness.example.json  bonus_partner_live_smoke.example.json  bonus_readiness.example.json  cloud_deployment.example.json  final_report_dry_run.example.json  final_submission_closeout.example.json  (+5 more)
scripts/: bonus_finalize_agreement.py  bonus_interop_smoke.py  bonus_partner_live_smoke.py  bonus_partner_readiness.py  bonus_send_final_email.py  cloud_run_deploy_template.sh  gmail_draft_preview.py  public_cloud_final_dry_run.py  public_cloud_smoke.py  run_bonus_game.py
(+170 files in other folders)
